# easy-study-flashcards

./: .gitignore  LICENCE.txt  Pipfile  build.bat  build.py  pyproject.toml  zip.py
easy_study_flashcards/: __init__.py
easy_study_flashcards/gemini/: client.py  models.py  prompts.py
easy_study_flashcards/pdf_processing/: core.py  splitter.py
easy_study_flashcards/utils/: latex.py  localization.py
study_flashcards_from_pdf/: __init__.py  flashcards_from_pdf.py  pdf_processor.py  prompts.py
study_flashcards_from_pdf/gemini/: client.py  prompts.py
study_flashcards_from_pdf/pdf_processing/: core.py  splitter.py
study_flashcards_from_pdf/utils/: __init__.py  colors.py  latex.py
tests/: conftest.py
tests/test_pdf_processing/: test_core.py  test_splitter.py
tests/test_utils/: test_colors.py  test_latex.py  test_localization.py
