[tool.poetry]
name = "easy-study-flashcards"
version = "0.1.0"
description = ""
authors = ["aintDatCap <default.pentagon042@passinbox.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<=3.13.5"
pypdf = "^5.9.0"
google-genai = "^1.28.0"
pyinstaller = "^6.15.0"
loguru = "^0.7.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
pytest-asyncio = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
